# battle-atlas

./: .gitignore  LICENSE  README.md  editmode-results2.xml  editmode-results3.xml  playmode-results2.xml
app/: .gitignore
pipeline/: pyproject.toml
pipeline/terrain_pipeline/: cli.py  config.py  crop.py  environment.py  environment_oakridge.py  export.py  fetch.py  landcover.py  process.py  relief.py
pipeline/tests/: test_cli.py  test_config.py  test_crop.py  test_environment.py  test_environment_oakridge.py  test_export.py  test_fetch.py  test_landcover.py  test_process.py  test_relief.py  test_smoke.py
reconstruction/: pyproject.toml
reconstruction/audio/: freesound-pack.lock.json
reconstruction/canonical/: angle.reconstruction.json  iverson.reconstruction.json
reconstruction/claims/: angle.claims.json  iverson.claims.json
reconstruction/dossiers/: csa-1c-bn-alexander.md  csa-1c-bn-cabell.md  csa-1c-bn-dearing.md  csa-1c-bn-henry.md  csa-1c-bn-wash-eshleman.md  csa-1c-hood-1-law.md  csa-1c-hood-2-robertson.md  csa-1c-hood-3-anderson.md  csa-1c-hood-4-benning.md  csa-1c-mcl-1-kershaw.md  csa-1c-mcl-2-semmes.md  csa-1c-mcl-3-barksdale.md  csa-1c-mcl-4-wofford.md  csa-1c-pic-1-garnett.md  csa-1c-pic-2-kemper.md  csa-1c-pic-3-armistead.md  csa-1c-pic-hq-pickett.md  csa-1c-wsh-3-miller.md  csa-2c-arty-ewell-wing.md  csa-2c-arty-hq-brown.md  csa-2c-ear-1-hays.md  csa-2c-ear-2-smith.md  csa-2c-ear-3-avery.md  csa-2c-ear-4-gordon.md  csa-2c-joh-1-steuart.md  csa-2c-joh-2-walker.md  csa-2c-joh-3-nicholls.md  csa-2c-joh-4-jones.md  csa-2c-rod-1-daniel.md  csa-2c-rod-2-iverson.md  csa-2c-rod-3-doles.md  csa-2c-rod-4-ramseur.md  csa-2c-rod-5-oneal.md  csa-3c-and-1-wilcox.md  csa-3c-and-2-mahone.md  csa-3c-and-3-wright.md  csa-3c-and-4-lang.md  csa-3c-and-5-posey.md  csa-3c-bn-garnett.md  csa-3c-bn-lane.md  (+157 more)
reconstruction/schemas/: claim.schema.json  reconstruction.schema.json  source.schema.json  (+2 more)
(+746 files in other folders)
