[project]
name = "terrain-pipeline"
version = "0.1.0"
description = "Battle Atlas terrain pipeline: USGS LiDAR DEM -> Unity heightmap"
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.3",
    "numpy>=1.26",
    "pyproj>=3.6",
    "requests>=2.31",
    "pillow>=10.0",
]

[dependency-groups]
dev = ["pytest>=8"]
